--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,3 +1,8 @@
 {{ define "main" }}
 
+<!-- <div class="hero"> -->
+    {{ partial "profile" . }}
+    <canvas id="canvas">
+    </canvas>
+<!-- </div> -->
 {{ end }}
