--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,10 +1,9 @@
-<div class="collapse" id="navbarToggleExternalContent">
-hello
+<div class="nav d-flex justify-content-center">
+  <ul>
+    <li><a href="#">home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Projects</a></li>
+    <li><a href="#">Blogs</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
 </div>
-<nav class="navbar nav">
-<div class="container-fluid">
-    <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span></span>
-    </button>
-</div>
-</nav>
