--- a/assets/scss/_profile.scss
+++ b/assets/scss/_profile.scss
@@ -132,17 +132,17 @@
   @keyframes secBlock {
     0% {
       width: 0%;
-      left: 0;
+      right: 0;
   
     }
     50% {
       width: 100%;
-      left: 0;
+      right: 0;
   
     }
     100% {
       width: 0;
-      left: 100%;
+      right: 100%;
     }
   }
   
