--- a/assets/scss/site.scss
+++ b/assets/scss/site.scss
@@ -2,4 +2,7 @@
 @import "default";
 @import "navbar";
 @import "profile";
-@import "about";
+// @import "about";
+// @import "blog";
+// @import "project";
+@import "contact";
