--- a/layouts/index.blog.html
+++ b/layouts/index.blog.html
@@ -1,158 +1,117 @@
-<div class="about container two-col-example">
-    <div class="row">
-      <div class="col-lg-6 col-xs-12">
-        <h2>Popular Topics</h2>
-        <div class="card-deck mb-1 text-center">
-          <div class="card mb-4 box-shadow">
-            <div class="card-body">
-              <i class="fas fa-shield-alt fa-4x com-icon"></i>
-              <h4 class="card-title pricing-card-title">Password Help</h4>
-              <p class="mt-3 mb-4">Reset, change, or unlock your NT/Login password.</p>
+{{ define "main" }}
+<div class="container">
+    <div class="courses-container py-3">
+        <div class="course">
+            <div class="course-preview">
+                <h6>POST</h6>
+                <h2>Graph Generator using C++</h2>
+                <a href="#">View all chapters <i class="fas fa-chevron-right"></i></a>
             </div>
-          </div>
-          <div class="card mb-4 box-shadow">
-            <div class="card-body">
-              <i class="fas fa-cloud fa-4x com-icon"></i>
-              <h4 class="card-title pricing-card-title">Cloud Conferencing Support</h4>
-              <p class="mt-3 mb-4">Setup or schedule a Webex or other video conference.</p>
+            <div class="course-info">
+                <div class="progress-container">
+                    <!-- <div class="progress"></div>
+                    <span class="progress-text">
+                        6/9 Challenges
+                    </span> -->
+                </div>
+                <!-- <h6>Chapter 4</h6> -->
+                <h4>Using C++ and OpenGL to create graph plotter. This was done as a part of SciLAB Hackathon.</h4>
+                <button class="btn">View</button>
             </div>
-          </div>
         </div>
-        <div class="card-deck mb-1 text-center">
-          <div class="card mb-4 box-shadow">
-            <div class="card-body">
-              <i class="fas fa-laptop fa-4x com-icon"></i>
-              <h4 class="card-title pricing-card-title">Order New Hardware</h4>
-              <p class="mt-3 mb-4">
-  Order a new laptop, phone, or other hardware.
-              </p>
-            </div>
-          </div>
-          <div class="card mb-4 box-shadow">
-            <div class="card-body">
-              <i class="fas fa-calendar-alt fa-4x com-icon"></i>
-              <h4 class="card-title pricing-card-title">Meeting Help</h4>
-              <p class="mt-3 mb-4">Learn how to schedule a meeting or reserve a conference room.</p>
-            </div>
-          </div>
-        </div>
-        <div class="card-deck mb-1 text-center">
-          <div class="card mb-4 box-shadow">
-            <div class="card-body">
-              <i class="fas fa-print fa-4x com-icon"></i>
-              <h4 class="card-title pricing-card-title">Printer Help</h4>
-              <p class="mt-3 mb-4">
-  Get help accessing a network printer or request service.
-              </p>
-            </div>
-          </div>
-          <div class="card mb-4 box-shadow">
-            <div class="card-body">
-              <i class="fas fa-podcast fa-4x com-icon"></i>
-              <h4 class="card-title pricing-card-title">Request VPN Access</h4>
-              <p class="mt-3 mb-4">Setup Comcast VPN on your company issued device.</p>
-            </div>
-          </div>
-        </div>
-        <div class="main-button"><button type="button" class="btn btn-primary com-button">See More Topics</button></div>
-      </div>
-      <div class="col-lg-6 col-xs-12">
-        <h2>Announcements</h2>
-        <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start list-com-announcements">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">Make Your Mobile Device More Secure</h5>
-  <!--             <small>3 days ago</small> -->
-            </div>
-            <p class="mb-1">With great power (of mobile devices), there must also come great responsibility. Three things you can do now to protect yourself and Comcast.</p>
-          </a>
-          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start list-com-announcements">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">Upgrades to Web Security: BLUE COAT</h5>
-  <!--             <small class="text-muted">3 days ago</small> -->
-            </div>
-            <p class="mb-1">On Tuesday morning February 13, we will complete a network change that will redirect all web traffic...</p>
-          </a>
-          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start list-com-announcements">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">Multi-Factor Authentication (MFA) for Outlook Web Access (OWA)</h5>
-  <!--             <small class="text-muted">3 days ago</small> -->
-            </div>
-            <p class="mb-1">Multi-Factor Authentication (MFA) for Outlook Web Acces​s (OWA), also known as “webmail,”...</p>
-          </a>
-          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">List group item heading</h5>
-  <!--             <small class="text-muted">3 days ago</small> -->
-            </div>
-            <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-          </a>
-        </div>
-        <div class="main-button"><button type="button" class="btn btn-primary com-button">See All Announcements & Alerts</button></div>
-      </div>
-      
     </div>
-  </div>
-  
-  <div class="container">
-        <div class="card-deck mb-3 text-center">
-          <div class="card mb-4 box-shadow">
-            <div class="card-body">
-              <i class="fas fa-shield-alt fa-4x com-icon"></i>
-              <h4 class="card-title pricing-card-title">Password Help</h4>
-              <p class="mt-3 mb-4">Reset, change, or unlock your NT/Login password.</p>
+    <div class="courses-container py-3">
+        <div class="course">
+            <div class="course-preview">
+                <h6>POST</h6>
+                <h2>Graph Generator using C++</h2>
+                <a href="#">View all chapters <i class="fas fa-chevron-right"></i></a>
             </div>
-          </div>
-          <div class="card mb-4 box-shadow">
-            <div class="card-body">
-              <i class="fas fa-cloud fa-4x com-icon"></i>
-              <h4 class="card-title pricing-card-title">Cloud Conferencing Support</h4>
-              <p class="mt-3 mb-4">Setup or schedule a Webex or other video conference.</p>
+            <div class="course-info">
+                <div class="progress-container">
+                    <!-- <div class="progress"></div>
+                    <span class="progress-text">
+                        6/9 Challenges
+                    </span> -->
+                </div>
+                <!-- <h6>Chapter 4</h6> -->
+                <h4>Using C++ and OpenGL to create graph plotter. This was done as a part of SciLAB Hackathon.</h4>
+                <button class="btn">View</button>
             </div>
-          </div>
-          <div class="card mb-4 box-shadow">
+        </div>
+    </div>
+    <div class="courses-container py-3">
+        <div class="course">
+            <div class="course-preview">
+                <h6>POST</h6>
+                <h2>Graph Generator using C++</h2>
+                <a href="#">View all chapters <i class="fas fa-chevron-right"></i></a>
+            </div>
+            <div class="course-info">
+                <div class="progress-container">
+                    <!-- <div class="progress"></div>
+                    <span class="progress-text">
+                        6/9 Challenges
+                    </span> -->
+                </div>
+                <!-- <h6>Chapter 4</h6> -->
+                <h4>Using C++ and OpenGL to create graph plotter. This was done as a part of SciLAB Hackathon.</h4>
+                <button class="btn">View</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+<!-- <div class="container-fluid">
+  <section id="minimal-statistics">
+    <div class="row">
+      <div class="col-12 mt-3 mb-1">
+        <h4 class="text-uppercase">Minimal Statistics Cards</h4>
+        <p>Statistics on minimal cards.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-3 col-sm-6 col-12"> 
+        <div class="card">
+          <div class="card-content">
             <div class="card-body">
-              <i class="fas fa-laptop fa-4x com-icon"></i>
-              <h4 class="card-title pricing-card-title">Order New Hardware</h4>
-              <p class="mt-3 mb-4">
-  Order a new laptop, phone, or other hardware.
-              </p>
+              <div class="media d-flex">
+                <div class="align-self-center">
+                  <i class="icon-pencil primary font-large-2 float-left"></i>
+                </div>
+                <div class="media-body text-right">
+                  <h3>278</h3>
+                  <span>New Posts</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-  </div>
-  
-  <div class="container">
-        <div class="card-deck mb-3 text-center">
-          <div class="card mb-4 box-shadow">
+      </div>
+      <div class="col-xl-3 col-sm-6 col-12">
+        <div class="card">
+          <div class="card-content">
             <div class="card-body">
-              <i class="fas fa-shield-alt fa-4x com-icon"></i>
-              <h4 class="card-title pricing-card-title">Password Help</h4>
-              <p class="mt-3 mb-4">Reset, change, or unlock your NT/Login password.</p>
-            </div>
-          </div>
-          <div class="card mb-4 box-shadow">
-            <div class="card-body">
-              <i class="fas fa-cloud fa-4x com-icon"></i>
-              <h4 class="card-title pricing-card-title">Cloud Conferencing Support</h4>
-              <p class="mt-3 mb-4">Setup or schedule a Webex or other video conference.</p>
-            </div>
-          </div>
-          <div class="card mb-4 box-shadow">
-            <div class="card-body">
-              <i class="fas fa-laptop fa-4x com-icon"></i>
-              <h4 class="card-title pricing-card-title">Order New Hardware</h4>
-              <p class="mt-3 mb-4">
-  Order a new laptop, phone, or other hardware.
-              </p>
-            </div>
-          </div>
-          <div class="card mb-4 box-shadow">
-            <div class="card-body">
-              <i class="fas fa-calendar-alt fa-4x com-icon"></i>
-              <h4 class="card-title pricing-card-title">Meeting Help</h4>
-              <p class="mt-3 mb-4">Learn how to schedule a meeting or reserve a conference room.</p>
+              <div class="media d-flex">
+                <div class="align-self-center">
+                  <i class="icon-speech warning font-large-2 float-left"></i>
+                </div>
+                <div class="media-body text-right">
+                  <h3>156</h3>
+                  <span>New Comments</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-  </div>
+      </div>
+    </div>
+</section>
+</div> -->
+
+{{ end }}
