--- a/assets/scss/site.scss
+++ b/assets/scss/site.scss
@@ -2,7 +2,8 @@
 @import "default";
 @import "navbar";
 @import "profile";
-// @import "about";
-// @import "blog";
+@import "about";
+@import "blog";
 // @import "project";
 @import "contact";
+@import "quote";
