--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -1,4 +1,4 @@
-<div class="profile text-center">
+<div class="profile text-center" id="profile">
     <div>Hi!</div> 
     <div> 
     <span class="mx-3"> I'm Anurag Kar</span>
