--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,9 @@
 {{ define "main" }}
 
 <!-- <div class="hero"> -->
+
     {{ partial "profile" . }}
+    {{ partial "quote" .}}
     <canvas id="canvas">
     </canvas>
 <!-- </div> -->
