--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,9 +1,9 @@
 <div class="nav d-flex justify-content-center">
   <ul>
-    <li><a href="#">home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Projects</a></li>
-    <li><a href="#">Blogs</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="/">home</a></li>
+    <li><a href="/about">About</a></li>
+    <li><a href="/project">Projects</a></li>
+    <li><a href="/blog">Blogs</a></li>
+    <li><a href="/contact">Contact</a></li>
   </ul>
 </div>
