--- a/assets/scss/site.scss
+++ b/assets/scss/site.scss
@@ -4,6 +4,8 @@
 @import "profile";
 @import "about";
 @import "blog";
-// @import "project";
+@import "project";
 @import "contact";
-@import "quote";
+// @import "quote";
+@import "svg";
+@import "footer";
