--- a/layouts/index.about.html
+++ b/layouts/index.about.html
@@ -1,82 +1,4 @@
 {{ define "main" }}
-{{ $image := resources.Get "/images/profile/devon.jpeg" }}
-{{ $image = $image.Resize "250x250" }}
-<div class="about container-fluid text-center py-5">
-  <div class="row">
-    <div class="about col d-flex justify-content-center">
-      <div class="card1">
-        <div class="card1__side card__side--front card1__side--front">
-          <div class="card1__description"><img class="rounded" src="{{ $image.RelPermalink }}"></div>
-          <div class="name">Anurag Kar</div>
-        </div>
-        <div class="card1__side card1__side--back card1__side--back">
-          <div class="tag py-3">They support my back!</div>
-          <div class="support d-flex flex-column bd-highlight mb-3">
-            <div class="p-2 bd-highlight">My Family!</div>
-            <div class="p-2 bd-highlight">Fiverr</div>
-            <div class="p-2 bd-highlight">Github</div>
-            <div class="p-2 bd-highlight">Youtube</div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="description pt-5">
-        <div class="card">
-          <div class="card-body">
-            <h3 class="card-title py-3">About</h3>
-            <h6 class="card-subtitle mb-2 text-muted">Introduction</h6>
-            <p class="card-text">Currently, I'm a student pursuing B.tech in Smart Manufacturing in Chennai.
-              My interests and passion lie in everything related to Science and Technology and I work for the development and growth of it.
-            </p>
-            <h6 class="card-subtitle mb-2 text-muted pt-3">Interests</h6>
-            <p class="card-text">Currently, I'm a student pursuing B.tech in Smart Manufacturing in Chennai.
-              My interests and passion lie in everything related to Science and Technology and I work for the development and growth of it.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!--2nd Row-->
-  <div class="row pt-5">
-    <div class="col">
-      <h3 class="text-center py-5">Skillz</h3>
-    </div>
-    <div class="col d-flex justify-content-center">
-      <div class="row">
-        <h3 class="text-center py-5">eXperience</h3>
-        <div class="col mx-auto">
-            
-            <!-- Timeline -->
-            <ul class="timeline">
-                <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
-                    <div class="timeline-arrow"></div>
-                    <h2 class="h5 mb-0">Title of section 1</h2><span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>21 March, 2019</span>
-                </li>
-                <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
-                    <div class="timeline-arrow"></div>
-                    <h2 class="h5 mb-0">Title of section 2</h2><span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>5 April, 2019</span>
-                    <!-- <p class="text-small mt-2 font-weight-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper.</p> -->
-                </li>
-                <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
-                    <div class="timeline-arrow"></div>
-                    <h2 class="h5 mb-0">Title of section 3</h2><span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>18 August, 2019</span>
-                </li>
-                <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
-                    <div class="timeline-arrow"></div>
-                    <h2 class="h5 mb-0">Title of section 4</h2><span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>10 October, 2019</span>
-                </li>
-            </ul><!-- End -->
-
-        </div>
-    </div>
-    </div>
-  </div>
-</div>
-
-
-
-
-
+  {{ partial "intro" .}}
+  {{ partial "resume" .}}
 {{ end }}
