--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -1,218 +1,156 @@
-// @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900');
-// .about{
-//   body{
-//     color: #303030 !important;
-//     margin-top:3em;
-//     font-family: 'Roboto', sans-serif;
-//   }
-
-//   .two-col-example{
-//     margin-bottom:10em;
-//   }
-
-//   h2{
-//     margin-bottom: 1em;
-//     text-align:center;
-//     font-size: 40px;
-//     font-weight: 300;
-//   }
-
-//   h4{
-//     font-weight: 400;
-//     font-size: 18px;
-//   }
-
-//   h5{
-//     color: #1F6F9A;
-//     font-weight: 400;
-//   }
-
-//   p{
-//     font-weight: 300;
-//     font-size: 14px;
-//   }
-
-//   .com-button{
-//     background-color: #1F6F9A;
-//     font-weight: 300;
-//     font-size: 18px;
-//     padding: .7em 2em;
-//     border-radius: 100px;
-//   }
-
-//   .main-button{
-//     margin-top: 1em;
-//     text-align: center;
-//   }
-
-//   .card{
-//     border-radius:3px;
-//     border: 1px solid #D1D1D1;
-//   }
-
-//   .card-deck .card {
-//       display: -webkit-box;
-//       display: -ms-flexbox;
-//       display: flex;
-//       -webkit-box-flex: 1;
-//       -ms-flex: 1 0 0%;
-//       flex: 1 0 0%;
-//       -webkit-box-orient: vertical;
-//       -webkit-box-direction: normal;
-//       -ms-flex-direction: column;
-//       flex-direction: column;
-//       margin-right: 6px;
-//       margin-bottom: 0;
-//       margin-left: 6px;
-//   }
-
-//   .com-icon{
-//     margin-bottom: .35em;
-//     color: #1F6F9A;
-//   }
-
-//   .list-group-item {
-//       position: relative;
-//       display: block;
-//       padding: 1rem .9em;
-//       margin-bottom: .5em;
-//       background-color: transparent;
-//   /*     border: 1px solid rgba(0, 0, 0, 0.125); */
-//     border: none;
-//   }
-
-//   .list-group-item:first-child {
-//   padding-top: 0;
-//   }
-
-//   .list-group p{
-//     font-size: 16px;
-//   }
-
-//   .list-com-announcements{
-//   border-bottom: 1px solid #D1D1D1; 
-//   }
-// }
-
-.about{
-  img{
-    border-radius: 50% !important;
+.about .content h3 {
+    font-weight: 700;
+    font-size: 26px;
+    color: #302f2f;
   }
-  .name{
-    color: white;
-    font-size: 1.5rem;
-  }
-  .tag{
-    color: white;
-    font-size: 1.5rem;
-  }
-  .support{
-    color: gray;
-  }
-  .description{
-    color: white;
-    text-align: left;
-  }
-}
-.card{
-  background: transparent;
-  width: 75%;
-  border: transparent;
-}
-.card1 {
-  background: transparent;
-  width: 50%;
-  position: relative;
-  height: 25em;
-  perspective: 150em;
-  border-radius: 50%;
-  //border: transparent;
   
-  &__side {
+  .about .content ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .about .content ul li {
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+  }
+  
+  .about .content ul strong {
+    margin-right: 10px;
+  }
+  
+  .about .content ul i {
+    font-size: 16px;
+    margin-right: 5px;
+    color: #149ddd;
+    line-height: 0;
+  }
+  
+  .about .content p:last-child {
+    margin-bottom: 0;
+  }
+  section {
+    padding-top: 60px;
+    padding-bottom: 1rem ;
+    overflow: hidden;
+  }
+  
+  .section-bg {
+    background: #f5f8fd;
+  }
+  
+  .section-title {
+    padding-bottom: 30px;
+  }
+  
+  .section-title h2 {
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    position: relative;
+    color: #149ddd;
+  }
+  
+  .section-title h2::after {
+    content: '';
     position: absolute;
-    top: 0;
+    display: block;
+    width: 50px;
+    height: 3px;
+    background: #149ddd;
+    bottom: 0;
     left: 0;
-    width: 100%;
-    height: 10em;
-    backface-visibility: hidden;
-    transition: all .6s ease;
-    // box-shadow: 1em 1em 2em rgba(0,0,0,.2);
-    
-    &--front {
-      background: transparent; 
-    }
-    
-    &--back {
-      background: transparent;
-      // box-shadow: 1em 1em 2em rgba(0,0,0,.2);
-      transform: rotateY(180deg);
-    }
   }
   
-  &:hover &__side--front {
-    transform: rotateY(-180deg);
+  .section-title p {
+    margin-bottom: 0;
+  }
+.fa-map-marked-alt{
+  color: #146b94;
+}
+/*--------------------------------------------------------------
+# Resume
+--------------------------------------------------------------*/
+.resume .resume-title {
+    font-size: 26px;
+    font-weight: 700;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #050d18;
   }
   
-  &:hover &__side--back {
-    transform: rotate(0);
+  .resume .resume-item {
+    padding: 0 0 20px 20px;
+    margin-top: -2px;
+    border-left: 2px solid #1f5297;
+    position: relative;
   }
   
-  &__description {
+  .resume .resume-item h4 {
+    line-height: 18px;
+    font-size: 18px;
+    font-weight: 600;
     text-transform: uppercase;
-    font-size: 5em;
-    padding: 1em 0;
-    
+    font-family: "Poppins", sans-serif;
+    color: #050d18;
+    margin-bottom: 10px;
+  }
+  
+  .resume .resume-item h5 {
+    font-size: 16px;
+    background: #e4edf9;
+    padding: 5px 15px;
+    display: inline-block;
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+  
+  .resume .resume-item ul {
+    padding-left: 20px;
+  }
+  
+  .resume .resume-item ul li {
+    padding-bottom: 10px;
+  }
+  
+  .resume .resume-item:last-child {
+    padding-bottom: 0;
+  }
+  
+  .resume .resume-item::before {
+    content: "";
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    border-radius: 50px;
+    left: -9px;
+    top: 0;
+    background: #fff;
+    border: 2px solid #1f5297;
+  }
+  .skills{
+    h5{
+      text-shadow: black;
+      font-weight: bold;
+    }
+  }
+  $aqua: #149ddd;
+  hr{
+  
+    border: 0;
+    height: 3px;
+    width: 70%;
+    position: relative;
+    margin: 30px auto;
+    color: $aqua;
+}
+.skills{
+  h5{
+    margin-top: 1.8rem;
   }
 }
 
-h3{
-  color: #fff !important;
-}
-
-ul.timeline {
-  list-style-type: none;
-  position: relative;
-  padding-left: 1.5rem;
-}
-
-/* Timeline vertical line */
-ul.timeline:before {
-  content: ' ';
-  background: #fff;
-  display: inline-block;
-  position: absolute;
-  left: 16px;
-  width: 4px;
-  height: 100%;
-  z-index: 400;
-  border-radius: 1rem;
-}
-
-li.timeline-item {
-  margin: 20px 0;
-}
-
-/* Timeline item arrow */
-.timeline-arrow {
-  border-top: 0.5rem solid transparent;
-  border-right: 0.5rem solid #fff;
-  border-bottom: 0.5rem solid transparent;
-  display: block;
-  position: absolute;
-  left: 2rem;
-}
-
-/* Timeline item circle marker */
-li.timeline-item::before {
-  content: ' ';
-  background: #ddd;
-  display: inline-block;
-  position: absolute;
-  border-radius: 50%;
-  border: 3px solid #fff;
-  left: 11px;
-  width: 14px;
-  height: 14px;
-  z-index: 400;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+.hero{
+  height: vh;
 }
