--- a/assets/scss/_contact.scss
+++ b/assets/scss/_contact.scss
@@ -1,79 +1,52 @@
-.signupSection {
-    background: url(https://source.unsplash.com/TV2gg2kZD1o/1600x800);
-    background-repeat: no-repeat;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 800px;
-    height: 450px;
-    text-align: center;
-    display: flex;
+/* Button used to open the contact form - fixed at the bottom of the page */
+.open-button {
+    position: fixed;
+    transition: 0.6s;
+    bottom: -40px;
+    right: 10px;
+    background-color: rgba(20, 157, 221, 0.6);
     color: white;
-    box-shadow: 3px 10px 20px 5px rgba(0, 0, 0, .5);
+    padding: 0.8rem 1.2rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    // opacity: 0.;
+    z-index: 99;
+    // width: 280px;
+}
+  
+  /* The popup form - hidden by default */
+  .form-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    right: 20px;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
   }
   
-  .info {
-    width: 45%;
-    background: rgba(20, 20, 20, .8);
-    padding: 30px 0;
-    border-right: 5px solid rgba(30, 30, 30, .8);
-    h2 {
-      padding-top: 30px;
-      font-weight: 300;
-    }
-    p {
-      font-size: 18px;
-    }
-    .icon {
-      font-size: 8em;
-      padding: 20px 0;
-      color: rgba(10, 180, 180, 1);
-    }
-  }
-  
-  .signupForm {
-    width: 70%;
-    padding: 30px 0;
-    background: rgba(20, 40, 40, .8);
-    transition: .2s;
-    h2 {
-      font-weight: 300;
-    }
-  }
-  
-  .inputFields {
-    margin: 15px 0;
-    font-size: 16px;
+  /* Add styles to the form container */
+  .form-container {
+    max-width: 300px;
     padding: 10px;
-    width: 250px;
-    border: 1px solid rgba(10, 180, 180, 1);
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    background: rgba(20, 20, 20, .2);
-    color: white;
+    background-color: white;
+  }
+  
+  /* Full-width input fields */
+  .form-container input[type=text], .form-container input[type=password] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
+  }
+  
+  /* When the inputs get focus, do something */
+  .form-container input[type=text]:focus, .form-container input[type=password]:focus {
+    background-color: #ddd;
     outline: none;
   }
-  
-  .noBullet {
-    list-style-type: none;
-    padding: 0;
+
+  .fa-times{
+    // color: #149ddd;
   }
-  
-  #join-btn {
-    border: 1px solid rgba(10, 180, 180, 1);
-    background: rgba(20, 20, 20, .6);
-    font-size: 18px;
-    color: white;
-    margin-top: 20px;
-    padding: 10px 50px;
-    cursor: pointer;
-    transition: .4s;
-    &:hover {
-      background: rgba(20, 20, 20, .8);
-      padding: 10px 80px;
-    }
-  }
-  
-  
