--- a/assets/scss/_project.scss
+++ b/assets/scss/_project.scss
@@ -1,267 +1,323 @@
 
-.container{
-    color: white;
-    width:100vw;
-    height: 100vh;
-    display: flex;
-    flex-flow: row;
-    perspective: 1000px;
-    perspective-origin: center;
+// .card-margin {
+//     margin-bottom: 1.875rem;
+// }
+
+
+.project{
+  .card {
+    border: 0;
+    box-shadow: 0px 0px 10px 0px rgba(82, 63, 105, 0.1);
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(82, 63, 105, 0.1);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(82, 63, 105, 0.1);
+    -ms-box-shadow: 0px 0px 10px 0px rgba(82, 63, 105, 0.1);
   }
-  
-  .col{
-    height:  100%;
-    transition: transform 600ms cubic-bezier(0.390, 0.575, 0.565, 1.000), opacity 300ms ease;
-    transform: translateZ(34px) scale(.98);
-    flex: 0 0 33.3333%; 
+  .card {
     position: relative;
-  }
-  
-  .col:nth-of-type(1){
-    transform: rotateY(5deg) translateZ(34px) scale(.98);
-  }
-  
-  .col:nth-of-type(3){
-    transform: rotateY(-5deg) translateZ(34px) scale(.98);
-  }
-  
-  .col:hover,
-  .col:focus{
-    transform: translateZ(34px);
-    transition: transform 300ms cubic-bezier(0.390, 0.575, 0.565, 1.000), opacity 300ms ease;
-  }
-  
-  .card-container{
-    position: relative;
-    width: calc(100% - 25px);
-    height:  calc(33.3% - 25px);
-    margin: 17px;
-    padding: 8px;
-    text-align: center;
-    opacity: .89;
-  }
-  
-  .card-container:hover,
-  .card-container:focus{
-    opacity: 1;
-  }
-  
-  .overlay{
-    display: block;
-    position: absolute;
-    cursor: pointer;
-    width: 50%;
-    height: 50%;
-    z-index: 1;
-    transform: translateZ(34px);
-  }
-  
-  .overlay:nth-of-type(1){
-    left: 0;
-    top: 0;
-  }
-  
-  .overlay:nth-of-type(2){
-    right: 0;
-    top: 0;
-  }
-  
-  .overlay:nth-of-type(3){
-    bottom: 0;
-    right: 0;
-  }
-  
-  .overlay:nth-of-type(4){
-    bottom: 0;
-    left: 0;
-  }
-  
-  .overlay:nth-of-type(1):hover ~ .card,
-  .overlay:nth-of-type(1):focus ~ .card{
-    transform-origin: right top;
-    transform: rotateX(3deg) rotateY(-3deg) translateZ(0);
-  }
-  
-  .overlay:nth-of-type(2):hover ~ .card,
-  .overlay:nth-of-type(2):focus ~ .card{
-    transform-origin: left top;
-    transform: rotateX(3deg) rotateY(3deg) translateZ(0);
-  }
-  
-  .overlay:nth-of-type(3):hover ~ .card,
-  .overlay:nth-of-type(3):focus ~ .card{
-    transform-origin: left bottom;
-    transform: rotateX(-3deg) rotateY(3deg) translateZ(0);
-  }
-  
-  .overlay:nth-of-type(4):hover ~ .card,
-  .overlay:nth-of-type(4):focus ~ .card{
-    transform-origin: right bottom;
-    transform: rotateX(-3deg) rotateY(-3deg) translateZ(0);
-  }
-  
-  .card{
-    border-radius: 5px;
-    height: 100%;
-    transition: all 300ms ease-out;
-    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-end;
-    position: relative;
-    z-index: 0;
-    opacity: .89;
-    padding: 13px 21px;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #ffffff;
+    background-clip: border-box;
+    border: 1px solid #e6e4e9;
+    border-radius: 8px;
   }
-  
-  .card:before,
-  .card:after{
-    content: '';
-    position: absolute;
-    left:0;
-    top: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
-    opacity: .21;
-    transition: transform 300ms ease;
-    transform: scale(.98);
+
+  .card .card-header.no-border {
+    border: 0;
   }
-  
-  .card:before{
-    background-size: cover;
-    background-position: 50% 50%;
+  .card{
+  border: none !important;
   }
-  
-  .card-container:hover .card:before,
-  .card-container:hover .card:after,
-  .card-container:focus .card:before,
-  .card-container:focus .card:after{
-    opacity: .34;
-    transform: scale(1);
+  .card-title{
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 0px;
+  padding-bottom: 20px;
+  position: relative;
+  color: #404648;
   }
-  
-  .col:nth-of-type(1) .card-container:nth-of-type(1) .card:before{
-        background-image: url('https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/pia22474-2000.jpg?itok=cajl1lYH');
-  }
-  
-  .col:nth-of-type(2) .card-container:nth-of-type(1) .card:before{
-        background-image: url('https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/m18-090.jpg?itok=TQ8Fuk4x');
-  }
-  
-  .col:nth-of-type(3) .card-container:nth-of-type(1) .card:before{
-        background-image: url('https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/40808879360_18c96d62f1_o.jpg?itok=NttmTWPK');
-  }
-  
-  .col:nth-of-type(1) .card-container:nth-of-type(2) .card:before{
-        background-image: url('https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/jwst-pv-145604copy.jpg?itok=Jq7GN-Rc');
-  }
-  
-  .col:nth-of-type(2) .card-container:nth-of-type(2) .card:before{
-        background-image: url('https://www.nasa.gov/sites/default/files/styles/ubernode_alt_horiz/public/thumbnails/image/worldview201709201920x1080.png');
-  }
-  
-  .col:nth-of-type(3) .card-container:nth-of-type(2) .card:before{
-        background-image: url('https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/nasasibexobs.jpg?itok=U2LCp14i');
-  }
-  
-  .col:nth-of-type(1) .card-container:nth-of-type(3) .card:before{
-        background-image: url('https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/pia19808.jpg?itok=rgxgamMM');
-  }
-  
-  .col:nth-of-type(2) .card-container:nth-of-type(3) .card:before{
-        background-image: url('https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/e0102_lg.jpg?itok=sd9lOayI');
-  }
-  
-  .col:nth-of-type(3) .card-container:nth-of-type(3) .card:before{
-        background-image: url('https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/asteroid20180605-home.jpg?itok=KSUffiCR');
-  }
-  
-  .card:after{
-    background: linear-gradient(to bottom, rgba(0,0,0,0) 50%,rgba(0,0,0,0.89) 100%);
-  }
-  
-  h4{
-    text-align: left;
-    font-size: 18px;
-    font-weight:400;
-    transform: translateY(5px);
-    transition: transform 450ms cubic-bezier(0.390, 0.575, 0.565, 1.000);
-    max-width: 320px;
-    outline: 1px solid transparent;
-  }
-  
-  .overlay:hover ~ .card h4,
-  .overlay:focus ~ .card h4{
-    transform: translateZ(144px);
-  }
-  
-  .card > span{
-    font-size: 34px;
-    opacity: 0;
-    transform: translateX(-3px);
-    transition: all 300ms ease;
-  }
-  
-  .card-container:hover > .card > h4,
-  .card-container:focus > .card > h4{
-    transform: translateY(-13px);
-  }
-  
-  .card-container:hover > .card > span,
-  .card-container:focus > .card > span{
-   opacity: 1;
-      transform: translateX(3px);
-    animation: slideRight 300ms ease;
-  }
-  
-  @media (max-width: 768px){
-    body{
-      overflow-y: scroll;
-    }
-    h4{
-      font-size: 17px;
-    }
-  }
-  
-  @media (max-width: 540px){
-    .container{
-      flex-flow: column;
-      perspective: none;
-    }
-    
-    .col:nth-of-type(1),
-    .col:nth-of-type(2),
-    .col:nth-of-type(3),
-    .col:hover{
-        transform: none;
-    }
-    
-    h4{
-      padding-bottom: 8px;
-      font-size: 18px;
-    }
-    
-  .card > span{
-        display: none;
-    }
-  }
-  
-  @media (max-height: 599px){
-  .card > span{
-        display: none;
-    }
-  }
-  
-  @media (max-width: 860px) and (max-height: 540px){
-    h4{
-      font-size: 14px;
-    }
-  }
-  
-  @media (max-width: 620px) and (max-height: 540px){
-    h4{
-      font-size: 13px;
-    }
-  }
+}
+
+.card .card-header {
+    background: none;
+    padding: 0 0.9375rem;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    min-height: 50px;
+}
+.card-header:first-child {
+    border-radius: calc(8px - 1px) calc(8px - 1px) 0 0;
+}
+
+.widget-49 .widget-49-title-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-primary {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #edf1fc;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-primary .widget-49-date-day {
+  color: #4e73e5;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-primary .widget-49-date-month {
+  color: #4e73e5;
+  line-height: 1;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-secondary {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #fcfcfd;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-secondary .widget-49-date-day {
+  color: #dde1e9;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-secondary .widget-49-date-month {
+  color: #dde1e9;
+  line-height: 1;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-success {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #e8faf8;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-success .widget-49-date-day {
+  color: #17d1bd;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-success .widget-49-date-month {
+  color: #17d1bd;
+  line-height: 1;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #ebf7ff;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-info .widget-49-date-day {
+  color: #36afff;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-info .widget-49-date-month {
+  color: #36afff;
+  line-height: 1;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-warning {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: floralwhite;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-warning .widget-49-date-day {
+  color: #FFC868;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-warning .widget-49-date-month {
+  color: #FFC868;
+  line-height: 1;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-danger {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #feeeef;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-danger .widget-49-date-day {
+  color: #F95062;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-danger .widget-49-date-month {
+  color: #F95062;
+  line-height: 1;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-light {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #fefeff;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-light .widget-49-date-day {
+  color: #f7f9fa;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-light .widget-49-date-month {
+  color: #f7f9fa;
+  line-height: 1;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-dark {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #ebedee;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-dark .widget-49-date-day {
+  color: #394856;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-dark .widget-49-date-month {
+  color: #394856;
+  line-height: 1;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-base {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #f0fafb;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-base .widget-49-date-day {
+  color: #68CBD7;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-date-base .widget-49-date-month {
+  color: #68CBD7;
+  line-height: 1;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-meeting-info {
+  display: flex;
+  flex-direction: column;
+  margin-left: 1rem;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-meeting-info .widget-49-pro-title {
+  color: #3c4142;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.widget-49 .widget-49-title-wrapper .widget-49-meeting-info .widget-49-meeting-time {
+  color: #a3acb6;
+  font-size: 13px;
+}
+
+.widget-49 .widget-49-meeting-points {
+  font-weight: 400;
+  font-size: 13px;
+  margin-top: .5rem;
+}
+
+.widget-49 .widget-49-meeting-points .widget-49-meeting-item {
+  display: list-item;
+  color: #727686;
+}
+
+.widget-49 .widget-49-meeting-points .widget-49-meeting-item span {
+  margin-left: .5rem;
+}
+
+.widget-49 .widget-49-meeting-action {
+  text-align: right;
+}
+
+.widget-49 .widget-49-meeting-action a {
+  text-transform: uppercase;
+}
