--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,13 +3,16 @@
 {{ partial "header" . }}
     <body>
         {{ partial "navbar" }}
+        {{ partial "download" }}
+        {{ partial "contact" }}
         {{ block "main" . }}{{ end }}
-        {{ partial "footer" }}
         {{ $bootstrap := resources.Get "js/vendor/bootstrap.min.js" }}
         {{ $site := resources.Get "js/site.js" }}
+        {{ partial "footer" }}
 
         <script src="{{$bootstrap.RelPermalink}}"></script>
         <script src="{{$site.RelPermalink}}"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
+        <script src="https://kit.fontawesome.com/f19a3f2e53.js" crossorigin="anonymous"></script>
     </body>
 </html>
