--- a/layouts/index.project.html
+++ b/layouts/index.project.html
@@ -1,117 +1,36 @@
 {{ define "main" }}
-<div class="container">
-  
-    <div class="col">
-  
-      <div class="card-container">
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="card">
-          <h4>Juno Solves 39-Year Old Mystery of Jupiter Lightning</h4>
-          <span>&rsaquo;</span>
-        </div>
-      </div>
-      
-      <div class="card-container">
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="card">
-          <h4>Engineers Solve Excessive Heat Removal from NASA’s Webb Telescope</h4>
-          <span>&rsaquo;</span>
-        </div>
-      </div>
-      
-      <div class="card-container">
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="card">
-          <h4>NASA Finds Ancient Organic Material, Mysterious Methane on Mars</h4>
-          <span>&rsaquo;</span>
-        </div>
-      </div>
-      
-    </div>
-    
-    <div class="col">
-  
-      <div class="card-container">
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="card">
-          <h4>NASA to Host Live Discussion on New Mars Science Results</h4>
-          <span>&rsaquo;</span>
-        </div>
-      </div>
-      
-      <div class="card-container">
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="card">
-          <h4>20 Years of Earth Data Now at Your Fingertips</h4>
-          <span>&rsaquo;</span>
-        </div>
-      </div>
-      
-      <div class="card-container">
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="card">
-           <h4>Astronomers Spot a Distant and Lonely Neutron Star</h4>
-          <span>&rsaquo;</span>
-        </div>
-      </div>
-      
-    </div>
-    
-    <div class="col">
-  
-      <div class="card-container">
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="card">
-          <h4>Astronauts Safely in Orbit Following Launch to International Space Station</h4>
-          <span>&rsaquo;</span>
-        </div>
-      </div>
-      
-      <div class="card-container">
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="card">
-          <h4>As Solar Wind Blows, Our Heliosphere Balloons</h4>
-          <span>&rsaquo;</span>
-        </div>
-      </div>
-      
-      <div class="card-container">
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="overlay"></div>
-        <div class="card">
-          <h4>Tiny Asteroid Discovered Saturday Disintegrates Hours Later Over Southern Africa</h4>
-          <span>&rsaquo;</span>
-        </div>
-      </div> 
-      
-    </div>
-    
-  </div>
-
+{{ with site.Data.projects }}
+<section id="blog">
+	<div class="container project">
+		<div class="row">
+	    {{ range .project }}
+		  <div class="col-12 col-sm-8 col-md-6 col-lg-4 py-3">
+			<div class="card h-100">
+			  <div class="card-body">
+				<h4 class="card-title">{{ .title }}</h4>
+				<small class="text-muted cat">
+				 {{ .date }}
+				</small>
+				<p class="card-text">{{ .sample }}</p>
+                <div class="d-flex justify-content-between">
+                    {{ with resources.GetMatch (print "images/projects/" .image) }}
+                    {{ with .Resize "175x80" }}
+                    <div>
+                        <img class="img-fluid d-block mx-auto" src="{{.RelPermalink}}" alt="some" height="{{.Height}}" width="{{.Width}}">
+                    </div>
+                    {{ end }}
+                    {{ end }}
+                    <div><button class="custom-btn btn-11">View</button></div>
+                </div>
+			  </div>
+			  <!-- <div class="card-footer text-muted d-flex justify-content-between bg-transparent border-top-0">
+                  Github
+			  </div> -->
+			</div>
+		  </div>
+		 {{ end }}
+		</div>
+	</div>	
+</section>
+{{ end }}
 {{ end }}
