--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,9 +1,21 @@
-<div class="nav d-flex justify-content-center">
-  <ul>
-    <li><a href="/">home</a></li>
-    <li><a href="/about">About</a></li>
-    <li><a href="/project">Projects</a></li>
-    <li><a href="/blog">Blogs</a></li>
-    <li><a href="/contact">Contact</a></li>
-  </ul>
-</div>
+{{ with site.Data.navbar }}
+<nav class="sticky-top navbar navbar-expand-lg border-bottom" id="navbar">
+  <div class="container-fluid">
+    {{ $svg := partial "inline-svg" "logo" }}
+    <a class="navbar-brand" href="/">{{ $svg }}</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <i class="fas fa-ellipsis-h"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav mx-auto">
+        {{ range .links }}
+        <!-- <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li> -->
+        <li class="nav-item my-2"><a class="nav-link p-1 effect-underline" href="{{ .navlink }}"><i class="{{ .icon }}"></i> {{ upper .nav }}</a></li>
+        {{ end }}
+      </ul>
+    </div>
+  </div>
+</nav>
+{{ end }}
