--- a/layouts/partials/quote.html
+++ b/layouts/partials/quote.html
@@ -1,8 +1,8 @@
-<div class="blockquote-wrapper">
+{{/*  <div class="blockquote-wrapper">
     <div class="blockquote">
       <h2>
         Start before you are ready
        </h2>
       <h4>&mdash;Steven Pressfield</h4>
     </div>
-  </div>
+  </div>  */}}
