--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -13,7 +13,7 @@
         flex-direction: column;
         min-width: 0;
         word-wrap: break-word;
-        background-color: #ffffff;
+        background-color: rgb(255, 255, 245);
         background-clip: border-box;
         border: 1px solid #e6e4e9;
         border-radius: 8px;
