--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,10 +7,14 @@
         {{ partial "contact" }}
         {{ block "main" . }}{{ end }}
         {{ $bootstrap := resources.Get "js/vendor/bootstrap.min.js" }}
-        {{ $site := resources.Get "js/site.js" }}
+        {{ $site := resources.Get "js/local.js" }}
+        {{ $bootstrap1 := resources.Get "js/bootstrap.min.js" }}
+        {{ $bootstrap2 := resources.Get "js/bootstrap.bundle.min.js" }}
         {{ partial "footer" }}
 
         <script src="{{$site.RelPermalink}}"></script>
+        <script src="{{$bootstrap1.RelPermalink}}"></script>
+        <script src="{{$bootstrap2.RelPermalink}}"></script>
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
         <script src="https://kit.fontawesome.com/f19a3f2e53.js" crossorigin="anonymous"></script>
     </body>
