--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -8,7 +8,7 @@
     <h2>{{ .section }}</h2>
   </div>
   <div class="row">
-    <div class="col-lg-4" data-aos="fade-right">
+    <div class="col-lg-4">
       <img src="{{ $image.RelPermalink }}" class="img-fluid rounded-circle" alt="">
     </div>
     <div class="col-lg-8 pt-4 pt-lg-0 content">
