--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,7 +1,7 @@
 footer {
     background-color: white;
-    // position: absolute;
-    // bottom: 0;
+    position: absolute;
+    bottom: 0;
     // border-top: 1px solid #149ddd !important;
     font-weight: bold;
     font-size: 0.8rem;
